# ethaccinfo.g.khassanov.xyz

./: README.md  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .eslintrc.js  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/pages/: ether-balance.vue  index.vue  tokens-balance.vue  transactions.vue
pages/: tokens-balance.vue  transactions.vue
